# PhotoLab

./: README.md  README_RUS.md
src/: CMakeLists.txt  Makefile
src/controller/: controller.cpp  controller.h
src/forms/: interface.ui  kernel.ui  mainwindow.ui
src/model/: model.cpp  model.h
src/test/: CMakeLists.txt  testing.cpp
src/view/: interface.cpp  interface.h  kernel.cpp  kernel.h  mainwindow.cpp  mainwindow.h
